--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -70,14 +70,14 @@
   margin-bottom: 1em;
 
   @include breakpoint($large) {
-    position: sticky !important; /* added to make toc scroll with page */
-    float: right !important; /* added to make toc scroll with page */
+    position: sticky 
+    float: right 
     top: 0;
     right: 0;
     width: $right-sidebar-width-narrow;
     margin-right: -1 * $right-sidebar-width-narrow;
     padding-left: 1em;
-    padding-top: 1em !important; /* added to make toc scroll with page */
+    padding-top: 1em 
     z-index: 10;
   }
 /*
