--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,38 +3,14 @@
 
 @import "{{ site.theme }}";
 
-<table>: 表格
-<thead>: table header 表头区
-<th>: table headings 表头单元格内容
-<tbody>: 表格内容区
-<tr>: table row 表行
-<td>: table data 单元格内容
-
-table {
-    width: 100%; /*表格宽度*/
-    max-width: 65em; /*表格最大宽度，避免表格过宽*/
-    border: 1px solid #dedede; /*表格外边框设置*/
-    margin: 15px auto; /*外边距*/
-    border-collapse: collapse; /*使用单一线条的边框*/
-    empty-cells: show; /*单元格无内容依旧绘制边框*/
+.table-container{
+width: 100%;
+height: 300px;
+overflow: auto;
 }
-table th {
-    font-weight: bold; /*加粗*/
-    text-align: center !important; /*内容居中，加上 !important 避免被 Markdown 样式覆盖*/
-    background: rgba(158,188,226,0.2); /*背景色*/
-    white-space: nowrap; /*表头内容强制在一行显示*/
-}
-table td {
-  height: 35px; /*统一每一行的默认高度*/
-  border: 1px solid #dedede; /*内部边框样式*/
-  padding: 0 10px; /*内边距*/
-}
-.table-area {
-  height: 300px; /* 设置容器高度 */
-  overflow: auto; /* 滚动条自动出现 */
-}
-.table-wrapper {
-  height: 300px; /* 设置容器高度 */
-  overflow: auto;
-  overflow-y: scroll;
+th{
+position: sticky;
+top: 0;
+background-color: #fff;
+z-index: 999;
 }
